# rqlite-rs-axum-problem-example

./: Cargo.toml  Dockerfile
src/: main.rs
